# oitrainslate

./: .devcontainer.json  .env  .env-example  .gitignore  README.md  pyproject.toml
oitrainslate/: __init__.py  pyproject.toml  realtime_times_data_loader.py  realtraintimes.py  service_details.py
oitrainslate/src/oitrainslate/: __init__.py
src/oitrainslate/: __init__.py  location.py  realtime_times_data_loader.py  service_details.py  traintracker.py
tests/: man-example.json  service_example.json  test_http_response.py  test_realtime_times_data_loader.py  test_realtraintimes_api.py  test_service_list.py
