[project]
name = "oitrainslate"
version = "0.1.0"
description = "Tracking for whether a train is late."
readme = "README.md"
authors = [
    { name = "Dave Potts", email = "dave@davepotts.software" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
tracktrain = "oitrainslate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
