[project]
name = "oitrainslate"
version = "0.1.0"
description = "Tracking for whether a train is late."
readme = "README.md"
authors = [
    { name = "Dave Potts", email = "dave@davepotts.software" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
oitrainslate = "oitrainslate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
